# tonone

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ELEPHANT.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  TODOS.md  marketplace.json  pyproject.toml
.agent-logs/reports/: apex-apex-takeover-20260404-2300.html
.changelog/: CHANGELOG.md
.claude-plugin/: CLAUDE.md  marketplace.json  plugin.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_agent_proposal.md
.github/workflows/: ci.yml  publish.yml  test.yml
.reports/: apex-takeover-2026-04-12-0247.html  draft-statusline-review-2026-04-12.html  proof-agent-eval-2026-04-12-0315.html  team-review-2026-04-12-0301.html
.trunk/: trunk.yaml
agents/: apex.md  atlas.md  audit.md  axe.md  bind.md  brace.md  budget.md  buzz.md  cast.md  chain.md  change.md  chaos.md  cite.md  compat.md  copy.md  cortex.md  crest.md  cut.md  deal.md  deploy.md  draft.md  drift.md  echo.md  edge.md  embed.md  feat.md  finop.md  fit.md  flux.md  folk.md  forge.md  form.md  gate.md  grid.md  guard.md  guide.md  helm.md  hunt.md  ink.md  keel.md  (+37 more)
cloud-architecture/: README.md
cloud-architecture/cloud-run-specialist/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cloud-architecture/cloud-run-specialist/scripts/: pyproject.toml  setup.sh
cloud-architecture/cloud-run-specialist/scripts/cloudrun_agent/analyzers/: performance.py  pricing.py  resources.py  security.py
cloud-architecture/cloud-run-specialist/scripts/cloudrun_agent/models/: service.py
cloud-architecture/cloud-run-specialist/scripts/cloudrun_agent/tools/: gcloud.py  metrics.py
docs/: agent-guide.md  architecture.md  naming-guide.md  output-kit.md  sitemap.md  skill-guide.md
docs/launch/: hn-post.md
docs/plans/: 2026-03-28-apex-lead-agent-design.md  2026-03-28-bundle-plugin-design.md  2026-03-28-bundle-plugin-plan.md  2026-03-28-skills-design.md
hooks/: elephant-recall.js  elephant-writer.js  hooks.json  install-statusline.sh  test-statusline.sh  tonone-agent-tracker.js  tonone-git-gate.js  tonone-notify.js  tonone-onboard.js  tonone-pr-attribution.js  tonone-session-tracker.js  tonone-statusline.js  tonone-update-check.js  tonone-worktree-close.js  tonone-worktree-create.js  tonone-worktree-gate.js  tonone-worktree-session.js
launch/: x-thread.md
lib/shared/: report_schema.py
lib/uiux/: pyproject.toml  setup.sh
scripts/: bump-version.py  gen-skill-plugins.py  rename-agent-plugins.py
skills/apex/: SKILL.md
skills/apex-plan/: SKILL.md
skills/apex-recon/: SKILL.md
skills/apex-review/: SKILL.md
skills/apex-status/: SKILL.md
skills/apex-takeover/: SKILL.md
skills/atlas/: SKILL.md
skills/atlas-adr/: SKILL.md
skills/atlas-changelog/: SKILL.md
skills/atlas-elephant/: SKILL.md
skills/atlas-map/: SKILL.md
skills/atlas-onboard/: SKILL.md
skills/atlas-present/: SKILL.md
skills/atlas-recon/: SKILL.md
skills/atlas-report/: SKILL.md
skills/buzz/: SKILL.md
skills/buzz-community/: SKILL.md
skills/buzz-pitch/: SKILL.md
skills/buzz-social/: SKILL.md
skills/contribute/: SKILL.md
skills/cortex/: SKILL.md
skills/cortex-eval/: SKILL.md
skills/cortex-model/: SKILL.md
skills/cortex-prompt/: SKILL.md
skills/cortex-recon/: SKILL.md
skills/crest-compete/: SKILL.md
skills/crest-okr/: SKILL.md
team/apex/scripts/: pyproject.toml  setup.sh
team/apex/scripts/apex_agent/: __init__.py  apex_scan.py  dependency_graph.py  health_aggregator.py
team/atlas/scripts/: pyproject.toml  setup.sh
team/atlas/scripts/atlas_agent/: __init__.py
team/cortex/scripts/: pyproject.toml  setup.sh
team/cortex/scripts/cortex_agent/: __init__.py  eval_scan.py  llm_usage_scanner.py  prompt_evaluator.py  runner.py
team/crest/scripts/: pyproject.toml  setup.sh
team/crest/scripts/crest_agent/: __init__.py
team/draft/scripts/: pyproject.toml  setup.sh
team/draft/scripts/draft_agent/: __init__.py
team/draft/scripts/draft_agent/uiux/: __init__.py  __main__.py
team/flux/scripts/: pyproject.toml  setup.sh
team/flux/scripts/flux_agent/: __init__.py
team/forge/scripts/: pyproject.toml  setup.sh
team/forge/scripts/cloudrun_agent/: cli.py  dashboard.py  history.py  overview.py
team/forge/scripts/cloudrun_agent/tools/: parser.py
team/forge/scripts/forge_agent/: __init__.py  cloud_cost_fetcher.py  cost_scan.py  infracost_analyzer.py
team/form/scripts/: pyproject.toml  setup.sh
team/form/scripts/form_agent/: __init__.py
team/form/scripts/form_agent/uiux/: __init__.py  __main__.py
team/lens/scripts/: pyproject.toml  setup.sh
team/lens/scripts/lens_agent/: __init__.py
team/lens/scripts/lens_agent/uiux/: __init__.py  __main__.py
team/pitch/scripts/: pyproject.toml  setup.sh
team/pitch/scripts/pitch_agent/: __init__.py
team/pitch/scripts/pitch_agent/uiux/: __init__.py  __main__.py
team/prism/scripts/: pyproject.toml  setup.sh
team/prism/scripts/prism_agent/: __init__.py
team/prism/scripts/prism_agent/uiux/: __init__.py  __main__.py
team/relay/scripts/: pyproject.toml  setup.sh
team/relay/scripts/relay_agent/: __init__.py
team/spine/scripts/: pyproject.toml  setup.sh
team/spine/scripts/spine_agent/: __init__.py  endpoint_profiler.py  n_plus_one_detector.py  perf_scan.py
team/surge/scripts/: pyproject.toml  setup.sh
team/surge/scripts/surge_agent/: __init__.py
team/surge/scripts/surge_agent/uiux/: __init__.py  __main__.py
team/touch/scripts/: pyproject.toml  setup.sh
team/touch/scripts/touch_agent/: __init__.py
team/touch/scripts/touch_agent/uiux/: __init__.py  __main__.py
team/vigil/scripts/: pyproject.toml  setup.sh
team/vigil/scripts/vigil_agent/: __init__.py
team/volt/scripts/: pyproject.toml  setup.sh
team/volt/scripts/volt_agent/: __init__.py
templates/new-agent/scripts/: pyproject.toml  setup.sh
templates/new-agent/scripts/AGENT_MODULE/: __init__.py
tests/: ELEPHANT.md  test_agent_compliance.py  test_cli.py  test_hooks.py  test_registry.py  test_skill_compliance.py  test_structure.py
(+1359 files in other folders)
