[project]
name = "engteam"
version = "0.1.0"
description = "Your engineering team on call - Claude Code agents for infrastructure, security, and DevOps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = [
  "claude-code",
  "agents",
  "devops",
  "cloud",
  "infrastructure",
  "eng-team",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/thisisfatih/eng-team"
Issues = "https://github.com/thisisfatih/eng-team/issues"

[project.scripts]
engteam = "engteam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engteam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = ["pytest>=7.0.0"]
