[project]
name = "apex-agent"
version = "0.1.0"
description = "Engineering lead — orchestrates the team, scopes work, controls depth and budget"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
apex-agent = "apex_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apex_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
