[project]
name = "atlas-agent"
version = "0.1.0"
description = "Knowledge engineer — architecture docs, ADRs, API specs, system diagrams, onboarding"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
atlas-agent = "atlas_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
