[project]
name = "crest"
version = "0.1.0"
description = "Product strategist — roadmap planning, prioritization frameworks, competitive analysis, and market positioning"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
