[project]
name = "crest"
version = "1.9.1"
description = "Product strategist — roadmap planning, prioritization frameworks, competitive analysis, and market positioning"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
