[project]
name = "draft"
version = "0.9.9"
description = "UX designer — user flows, information architecture, wireframes, and interaction design"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
