[project]
name = "flux-agent"
version = "0.1.0"
description = "Data engineer — databases, migrations, pipelines, data modeling"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
flux-agent = "flux_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flux_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
