[project]
name = "forge-agent"
version = "0.1.0"
description = "Infrastructure engineer — cloud services, networking, IaC, cost optimization"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
forge-agent = "forge_agent.cli:main"
cloudrun-agent = "cloudrun_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_agent", "cloudrun_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
