[project]
name = "form"
version = "1.1.0"
description = "Visual designer — brand identity, color systems, typography, UI design, and design systems"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
