[project]
name = "lens-agent"
version = "0.1.0"
description = "Data analytics & BI engineer — dashboards, metrics design, reporting, data storytelling"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lens-agent = "lens_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lens_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
