[project]
name = "pitch"
version = "1.8.0"
description = "Product marketer — positioning, messaging, value proposition, GTM strategy, and launch copy"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
