[project]
name = "prism-agent"
version = "0.1.0"
description = "Frontend & DX engineer — UI, internal tools, developer portals"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prism-agent = "prism_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prism_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
