[project]
name = "prism"
version = "0.1.0"
description = "Frontend & DX engineer — UI, internal tools, developer portals"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
