[project]
name = "relay-agent"
version = "0.1.0"
description = "DevOps engineer — CI/CD, deployments, GitOps, developer experience"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
relay-agent = "relay_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relay_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
