[project]
name = "spine-agent"
version = "0.1.0"
description = "Backend engineer — APIs, system design, performance, distributed systems"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
spine-agent = "spine_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spine_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
