[project]
name = "surge"
version = "0.9.5"
description = "Growth engineer — acquisition channels, activation funnels, retention playbooks, and PLG strategy"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
