[project]
name = "surge"
version = "1.1.0"
description = "Growth engineer — acquisition channels, activation funnels, retention playbooks, and PLG strategy"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["uiux"]

[tool.uv.sources]
uiux = { path = "../../../lib/uiux", editable = true }

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
