[project]
name = "touch-agent"
version = "0.1.0"
description = "Mobile engineer — native iOS/Android, cross-platform, app stores, mobile performance"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
touch-agent = "touch_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["touch_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
