[project]
name = "vigil-agent"
version = "0.1.0"
description = "Observability & reliability engineer — monitoring, alerting, SRE, incident response, SLOs"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vigil-agent = "vigil_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigil_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
