[project]
name = "volt-agent"
version = "0.1.0"
description = "Embedded & IoT engineer — firmware, microcontrollers, edge computing, device protocols"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
volt-agent = "volt_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["volt_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
